--- a/html/login.html
+++ b/html/login.html
@@ -3,24 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SkyLottery - Login</title>
-    <link rel="stylesheet" href="../style/login.css">
+    <link rel="stylesheet" href="..\style\login.css">
+    <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <div class="left-section">
-            <img src="../assets/skylotto.png.png">
-        </div>
-        <div class="right-section">
-            <div class="login-box">
-                <label for="username">USERNAME</label>
-                <input type="text" id="username">
-                
-                <label for="password">PASSWORD</label>
-                <input type="password" id="password">
-                
-                <button class="login-btn">LOGIN</button>
-                <button class="create-account">CREATE ACCOUNT</button>
+    <div class="container-bg">
+        <img src="..\assets\background-img.jpg">
+        <div class="box-container">
+            <img src="..\assets\logo-img.png">
+            <div class="box-log">
+                <p>USERNAME</p>
+                <input type="text">
+                <p>PASSWORD</p>
+                <input type="text">
+                <a href="../html/home.html" class="login-btn">LOGIN</a>
+                <a href="../html/signup.html" class="signup-btn">CREATE ACCOUNT</a>
             </div>
         </div>
     </div>
