--- a/html/profile.html
+++ b/html/profile.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="..\style\home.css">
-    <link href="https://fonts.googleapis.com/css2?family=K2D:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="..\style\profile.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <title>Document</title>
 </head>
@@ -12,10 +11,25 @@
     <div class="container-bg">
         <img src="..\assets\background-img.jpg">
         <div class="box-container">
-            <img src="..\assets\logo-img.png">
-            <p>WELCOME TO</p>
-            <P>MARCHOTTERY</P>
-            <a href="../html/game.html" class="game-btn">PLAY</a>
+            <i class="fa-solid fa-user prof-icon">
+                <p>PEPITO MANALITO</p>
+            </i>
+            <div class="square-1">
+                <p class="balance">BALANCE:</p>
+                <P class="money">₱ 200, 00.00</P>
+            </div>
+            <div class="withdraw-btn">
+                <p>WITHDRAW</p>
+            </div>
+            <div class="square-2">
+                <p class="deposite">DEPOSIT:</p>
+                <input class="depo" type="number">
+            </div>
+            <div class="deposite-btn">
+                <p>DEPOSITE</p>
+            </div>
+            <div class="logout-btn">LOGOUT</div>
+
         </div>
     </div>
     <footer class="footer-icons">
