--- a/html/signup.html
+++ b/html/signup.html
@@ -3,29 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SkyLottery - Signup</title>
     <link rel="stylesheet" href="../style/signup.css">
+    <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <div class="left-section">
-            <img src="../assets/skylotto.png.png">
-        </div>
-        <div class="right-section">
-            <div class="signup-box">
-                <label for="username">USERNAME</label>
-                <input type="text" id="username">
-                
-                <label for="email">EMAIL</label>
-                <input type="email" id="email">
-
-                <label for="password">PASSWORD</label>
-                <input type="password" id="password">
-
-                <label for="confirm-password">CONFIRM PASSWORD</label>
-                <input type="password" id="confirm-password">
-                
-                <button class="signup-btn">CREATE ACCOUNT</button>
+    <div class="container-bg">
+        <img src="..\assets\background-img.jpg">
+        <div class="box-container">
+            <img src="..\assets\logo-img.png">
+            <div class="box-log">
+                <p>CREATE USERNAME</p>
+                <input type="text">
+                <p>CREATE PASSWORD</p>
+                <input type="text">
+                <p>CONFIRM PASSWORD</p>
+                <input type="text">
+                <p>CONTACT NUMBER</p>
+                <input type="text">
+                <a href="../html/login.html" class="signup-btn">CREATE ACCOUNT</a>
             </div>
         </div>
     </div>
