--- a/html/game.html
+++ b/html/game.html
@@ -24,9 +24,11 @@
                 <input id="inp-num-5" type="number">
                 <input id="inp-num-6" type="number">
             </div>
-            <div class="bet-box">
+            <div class="bet-part">
                 <input id="bet-input" type="number">
-                <p class="bet-btn">BET</p>
+                <a href="#bet-box" class="bet-btn">
+                <p>BET</p>
+            </a>
             </div>
             <div class="outside">
                 <p class="time">00:00</p>
@@ -45,6 +47,11 @@
             </div>
         </div>
     </div>
+    <h1 class="header-icons">
+        <a href="home.html"><i class="fa-solid fa-house-chimney nav-icon-1"></i></a>
+        <a href="history.html"><i class="fa-solid fa-medal nav-icon-2"></i></a>
+        <a href="profile.html"><i class="fa-solid fa-user nav-icon-3"></i></a>
+    </h1>
     <footer class="footer-icons">
         <a href="home.html"><i class="fa-solid fa-house-chimney nav-icon"></i></a>
         <a href="history.html"><i class="fa-solid fa-medal nav-icon"></i></a>
