--- a/html/history.html
+++ b/html/history.html
@@ -53,6 +53,11 @@
             </div>
         </div>
     </div>
+    <h1 class="header-icons">
+        <a href="home.html"><i class="fa-solid fa-house-chimney nav-icon-1"></i></a>
+        <a href="history.html"><i class="fa-solid fa-medal nav-icon-2"></i></a>
+        <a href="profile.html"><i class="fa-solid fa-user nav-icon-3"></i></a>
+    </h1>
     <footer class="footer-icons">
         <a href="home.html"><i class="fa-solid fa-house-chimney nav-icon"></i></a>
         <a href="history.html"><i class="fa-solid fa-medal nav-icon"></i></a>
