--- a/html/history.html
+++ b/html/history.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="..\style\history.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <title>Document</title>
+    <title>MACHOTTERY</title>
 </head>
 <body>
     <div class="container-bg">
@@ -62,6 +62,58 @@
         <a href="home.html"><i class="fa-solid fa-house-chimney nav-icon"></i></a>
         <a href="history.html"><i class="fa-solid fa-medal nav-icon"></i></a>
         <a href="profile.html"><i class="fa-solid fa-user nav-icon"></i></a>
-    </footer>    
+    </footer>
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const historyContainer = document.querySelector(".box-container");
+            const userId = localStorage.getItem("user_id"); // Get user ID from local storage
+
+            if (!historyContainer) {
+                console.error("❌ History container not found.");
+                return;
+            }
+
+            if (!userId) {
+                historyContainer.innerHTML = "<p>No user ID found. Please sign in.</p>";
+                return;
+            }
+
+            async function fetchHistory() {
+                try {
+                    const response = await fetch(`http://localhost:3000/v1/history/${userId}`, {
+                        method: "GET",
+                        headers: {
+                            "Content-Type": "application/json",
+                            "apikey": "lucky"
+                        }
+                    });
+
+                    const data = await response.json();
+
+                    if (data.success && data.history.length > 0) {
+                        renderHistory(data.history);
+                    } else {
+                        historyContainer.innerHTML = "<p>No history found.</p>";
+                    }
+                } catch (error) {
+                    console.error("Error fetching history:", error);
+                    historyContainer.innerHTML = "<p>Failed to load history. Please try again later.</p>";
+                }
+            }
+
+            function renderHistory(history) {
+                historyContainer.innerHTML = history.map((record, index) => `
+                    <div class="box-container box-${index + 1}">
+                        <img src="../assets/${record.status === 'win' ? 'win-img.png' : 'lost-img.png'}" alt="${record.status}">
+                        <p id="time-${index + 1}">${new Date(record.bet_time).toLocaleDateString()}</p>
+                        <p id="price-${index + 1}">₱${record.amount.toFixed(2)}</p>
+                    </div>
+                `).join("");
+            }
+
+            fetchHistory();
+        });
+
+    </script>    
 </body>
 </html>
