--- a/html/profile.html
+++ b/html/profile.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="..\style\profile.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <title>Document</title>
+    <title>MACHOTTERY</title>
 </head>
 <body>
     <div class="container-bg">
@@ -52,6 +53,81 @@
         <a href="home.html"><i class="fa-solid fa-house-chimney nav-icon"></i></a>
         <a href="history.html"><i class="fa-solid fa-medal nav-icon"></i></a>
         <a href="profile.html"><i class="fa-solid fa-user nav-icon"></i></a>
-    </footer>    
+    </footer> 
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const profileContainer = document.querySelector(".box-container");
+            const userId = localStorage.getItem("user_id"); // Get user ID from local storage
+
+            if (!profileContainer) {
+                console.error("❌ Profile container not found.");
+                return;
+            }
+
+            if (!userId) {
+                profileContainer.innerHTML = "<p>No user ID found. Please sign in.</p>";
+                return;
+            }
+
+            async function fetchProfile() {
+                try {
+                    const response = await fetch(`http://localhost:3000/v1/profile/${userId}`, {
+                        method: "GET",
+                        headers: {
+                            "Content-Type": "application/json",
+                            "apikey": "lucky"
+                        }
+                    });
+
+                    const data = await response.json();
+
+                    if (data.success && data.profile) {
+                        renderProfile(data.profile);
+                    } else {
+                        profileContainer.innerHTML = "<p>Profile not found.</p>";
+                    }
+                } catch (error) {
+                    console.error("Error fetching profile:", error);
+                    profileContainer.innerHTML = "<p>Failed to load profile. Please try again later.</p>";
+                }
+            }
+
+            function renderProfile(profile) {
+                profileContainer.innerHTML = `
+                    <i class="fa-solid fa-user prof-icon">
+                        <p>${profile.name}</p>
+                    </i>
+                    <div class="deposit-part">
+                        <p class="deposite">DEPOSIT:</p>
+                        <input class="depo" type="number">
+                        <a class="deposite-btn">
+                            <p>DEPOSIT</p>
+                        </a>
+                    </div>
+                    <a href="../html/login.html" class="logout-btn">LOGOUT</a>
+                    <div class="withdraw-part">
+                        <p class="balance">BALANCE:</p>
+                        <p class="money">₱ ${profile.balance.toFixed(2)}</p>
+                    </div>
+                    <a href="#withdraw-box" class="withdraw-btn">
+                        <p>WITHDRAW</p>
+                    </a>
+                    <div id="withdraw-box" class="withdraw-overlay">
+                        <div class="withdraw-box">
+                            <p>Enter your amount to withdraw</p>
+                            <input type="number" class="withdraw-input" placeholder="Enter amount">
+                            <a href="#" class="close-btn">&times;</a>
+                            <a href="#" class="enter">
+                                <p>OKAY</p>
+                            </a>
+                        </div>
+                    </div>
+                `;
+            }
+
+            // fetchProfile();
+        });
+
+    </script>
 </body>
 </html>
