--- a/html/login.html
+++ b/html/login.html
@@ -42,6 +42,8 @@
                     return;
                 }
 
+                localStorage.setItem('username', username)
+
                 console.log(username, password);
 
                 await nigga(username, password);
