--- a/html/login.html
+++ b/html/login.html
@@ -27,7 +27,7 @@
             const signinButton = document.querySelector('.signin-btn');
 
             if (!signinButton) {
-                console.error('❌ Login button not found.');
+                console.error('Login button not found.');
                 return;
             }
 
@@ -38,7 +38,7 @@
                 const password = document.getElementById('password').value.trim();
 
                 if (!username || !password) {
-                    alert('⚠️ Please fill in all fields.');
+                    alert('Please fill in all fields.');
                     return;
                 }
 
