--- a/html/history.html
+++ b/html/history.html
@@ -11,46 +11,7 @@
     <div class="container-bg">
         <img src="..\assets\background-img.jpg">
         <div class="box-container">
-            <div class="box-1">
-                <img src="..\assets\win-img.png">
-                <p id="time-1">03-15-25</p>
-                <p id="price-1">₱1,000.00</p>
-            </div>
-            <div class="box-2">
-                <img src="..\assets\win-img.png">
-                <p id="time-2">03-15-25</p>
-                <p id="price-2">₱1,000.00</p>
-            </div>
-            <div class="box-3">
-                <img src="..\assets\win-img.png">
-                <p id="time-3">03-15-25</p>
-                <p id="price-3">₱1,000.00</p>
-            </div>
-            <div class="box-4">
-                <img src="..\assets\lost-img.png">
-                <p id="time-4">03-15-25</p>
-                <p id="price-4">₱1,000.00</p>
-            </div>
-            <div class="box-5">
-                <img src="..\assets\win-img.png">
-                <p id="time-5">03-15-25</p>
-                <p id="price-5">₱1,000.00</p>
-            </div>
-            <div class="box-6">
-                <img src="..\assets\lost-img.png">
-                <p id="time-6">03-15-25</p>
-                <p id="price-6">₱1,000.00</p>
-            </div>
-            <div class="box-7">
-                <img src="..\assets\lost-img.png">
-                <p id="time-7">03-15-25</p>
-                <p id="price-7">₱1,000.00</p>
-            </div>
-            <div class="box-8">
-                <img src="..\assets\win-img.png">
-                <p id="time-8">03-15-25</p>
-                <p id="price-8">₱1,000.00</p>
-            </div>
+           
         </div>
     </div>
     <h1 class="header-icons">
@@ -65,65 +26,66 @@
     </footer>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-        const historyContainer = document.querySelector(".box-container");
-        const userId = localStorage.getItem("user_id"); 
+            const historyContainer = document.querySelector(".box-container");
+            const userId = localStorage.getItem("user_id");
 
-        if (!historyContainer) {
-            console.error("❌ History container not found.");
-            return;
-        }
-
-        if (!user_id) {
-            historyContainer.innerHTML = "<p>No user ID found. Please sign in.</p>";
-            return;
-        }
-
-        async function fetchHistory() {
-            try {
-                console.log("Fetching history for user ID:", user_id); 
-
-                const response = await fetch(`http://localhost:3000/v1/history/${user_id}`, {
-                    method: "GET",
-                    headers: {
-                        "Content-Type": "application/json",
-                        "apikey": "lucky"
-                    }
-                });
-
-                if (!response.ok) {
-                    throw new Error(`Server returned ${response.status} ${response.statusText}`);
-                }
-
-                const contentType = response.headers.get("content-type");
-                if (!contentType || !contentType.includes("application/json")) {
-                    throw new Error("Invalid JSON response from server.");
-                }
-
-                const data = await response.json();
-
-                if (data.success && data.history.length > 0) {
-                    renderHistory(data.history);
-                } else {
-                    historyContainer.innerHTML = "<p>No history found.</p>";
-                }
-            } catch (error) {
-                console.error("Error fetching history:", error);
-                historyContainer.innerHTML = "<p>Failed to load history. Please try again later.</p>";
+            if (!historyContainer) {
+                console.error("History container not found.");
+                return;
             }
-        }
 
-        function renderHistory(history) {
-            historyContainer.innerHTML = history.map((record, index) => `
-                <div class="box-container box-${index + 1}">
-                    <img src="../assets/${record.status === 'win' ? 'win-img.png' : 'lost-img.png'}" alt="${record.status}">
-                    <p id="time-${index + 1}">${new Date(record.bet_time).toLocaleDateString()}</p>
-                    <p id="price-${index + 1}">₱${record.amount.toFixed(2)}</p>
-                </div>
-            `).join("");
-        }
+            if (!userId) {
+                historyContainer.innerHTML = "<p>No user ID found. Please sign in.</p>";
+                return;
+            }
 
-        fetchHistory();
-    });
+            async function fetchHistory(user_id) {
+                try {
+                    console.log("Fetching history for user ID:", user_id);
+
+                    const response = await fetch(`http://localhost:3000/v1/history/history?userId=${user_id}`, {
+                        method: "GET",
+                        headers: {
+                            "Content-Type": "application/json",
+                            "apikey": "lucky"
+                        }
+                    });
+
+                    if (!response.ok) {
+                        throw new Error(`Server returned ${response.status} ${response.statusText}`);
+                    }
+
+                    const contentType = response.headers.get("content-type");
+                    if (!contentType || !contentType.includes("application/json")) {
+                        throw new Error("Invalid JSON response from server.");
+                    }
+
+                    const data = await response.json();
+                    console.log("Received data:", data);
+
+                    if (data && data.success && Array.isArray(data.history) && data.history.length > 0) {
+                        renderHistory(data.history);
+                    } else {
+                        historyContainer.innerHTML = "<p>No history found.</p>";
+                    }
+                } catch (error) {
+                    console.error("Error fetching history:", error);
+                    historyContainer.innerHTML = `<p>Failed to load history. Please try again later.<br>${error}</p>`;
+                }
+            }
+
+            function renderHistory(history) {
+                historyContainer.innerHTML = history.map((record, index) => `
+                    <div class="box-container box-${index + 1}">
+                        <img src="../assets/${record.status === 'win' ? 'win-img.png' : 'lost-img.png'}" alt="${record.status}">
+                        <p id="time-${index + 1}">${new Date(record.bet_time).toLocaleDateString()}</p>
+                        <p id="price-${index + 1}">₱${record.amount.toFixed(2)}</p>
+                    </div>
+                `).join("");
+            }
+
+            fetchHistory(userId); 
+        });
 
     </script>    
 </body>
